Replace Transport Client with High Level REST Client #7485 - fixed tests